force-app/main/default/objects/ssot__AdverseEventOutcome__dlm/fields/ssot__AdverseEventId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdverseEventId__c</fullName>
    <label>Adverse Event</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdverseEventId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>