force-app/main/default/objects/ssot__AdverseEventOutcome__dlm/fields/ssot__OutcomeCodeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutcomeCodeObject__c</fullName>
    <label>Outcome Code Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutcomeCodeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>