force-app/main/default/objects/ssot__AdverseEventOutcome__dlm/fields/ssot__rel_1716667900122_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716667900122_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventOutcome_AdverseEventId_m_rel</label>
    <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
    <relationshipLabel>AdverseEventOutcome_AdverseEventId_m_rel</relationshipLabel>
    <relationshipName>rel_1716667900122_end</relationshipName>
    <type>Lookup</type>
</CustomField>