force-app/main/default/objects/ssot__AdverseEventOutcome__dlm/fields/ssot__rel_1716721823952_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716721823952_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventOutcome_OutcomeCodeId_ma_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>AdverseEventOutcome_OutcomeCodeId_ma_rel</relationshipLabel>
    <relationshipName>rel_1716721823952_end</relationshipName>
    <type>Lookup</type>
</CustomField>